p fix for lack of collapsing in body

--- a/!DATA!/layout.css
+++ b/!DATA!/layout.css
@@ -256,6 +256,10 @@ p {
     padding: 0;
 }
 
+body p + p {
+    margin-top: 0;
+}
+
 dd p {
     margin: 0;
 }
